# windows-app

./: Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  dialog.rs  main.rs  thread_safe.rs  win_str.rs  window.rs
