[package]
name = "windows-app"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_Globalization",
    "Foundation",
]

[build-dependencies]
embed-manifest = "1.4"
winres = "0.1.12"